--- a/resources/style.css
+++ b/resources/style.css
@@ -8,10 +8,15 @@
   padding: 10px;
 }
 
-.times {
+.logo {
+  border: 1px solid black;
+  padding: 5px;
   color: MediumAquamarine;
-  padding: 10px;
 }
+
+.times {
+  display: inline-flex;
+  }
 
 .nav {
   margin-left: auto;
