--- a/resources/style.css
+++ b/resources/style.css
@@ -38,6 +38,9 @@ p {
 
 h2 {
   font-size: 30px;
+  font-weight: bold;
+  margin-bottom: 5px;
+  margin-top: 0;
 }
 
 .Main {
@@ -56,7 +59,7 @@ h2 {
 
 .phish { /* main image container */
   background-image: url(./images/main.png);
-  height: 250px;
+  height: 280px;
   display: flex;
   align-items: center;
 }
@@ -71,16 +74,19 @@ h2 {
 
 .group {
   display: flex;
+  justify-content: space-around;
 }
 
 .group1 {
   display: flex;
   flex-direction: column;
+  width: 280px;
 }
 
 .group2 {
   display: flex;
   flex-direction: column;
+  width: 300px;
 }
 
 .earth { /* second image container */
@@ -90,6 +96,7 @@ h2 {
   justify-content: center;
   align-items: center;
   text-align: center;
+  margin-top: 30px;
 }
 
 .backwards { /*second text */
@@ -97,6 +104,7 @@ h2 {
   font-weight: bold;
   font-size: 30px;
   color: white;
+  padding-left: 10px;
 }
 
 .research { /* third image container*/
@@ -105,6 +113,7 @@ h2 {
   display: flex;
   align-items: center;
   text-align: center;
+  margin-top: 30px;
 }
 
 .cameras { /*third text */
@@ -112,7 +121,6 @@ h2 {
   font-weight: bold;
   font-size: 30px;
   color: white;
-  margin: 0;
   padding-left: 10px;
 }
 
@@ -127,6 +135,7 @@ h2 {
   height: 300px;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .control {/*fourth text*/
@@ -142,5 +151,24 @@ h2 {
 .small {
   width: 240px;
   margin: 20px;
-  align-items: stretch;
+  display: flex;
+  flex-direction: column;
+
+}
+
+h3 {
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  padding: 10px;
+}
+
+.bites {
+  background-color: WhiteSmoke;
+  font-family: Verdana;
+  font-size: 12px;
+  color: DimGray;
+  border-bottom: 1px solid black;
+  margin: 0;
+  padding: 15px;
 }
