--- a/resources/style.css
+++ b/resources/style.css
@@ -172,3 +172,36 @@ h3 {
   margin: 0;
   padding: 15px;
 }
+
+.footer {
+  display: flex;
+  background-color: MediumAquamarine;
+  margin: auto;
+  height: 300px;
+  font-family: Verdana;
+  font-size: 12px;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.bottomlogo {
+  font-family: Georgia;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  margin-right: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.bracket {
+  color: white;
+  margin: 20px;
+}
+
+.foot {
+  font-family: Verdana;
+  font-size: 12px;
+  margin: 10px;
+}
